fixed some naming stuff

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- Viewport Wrapper -->
   <div class="one-viewport">
     <!-- Title -->
-    <h1><a href="index.html">Kevin Chen</a></h1>
+    <h1><a href="index.html">Jose Siguenza</a></h1>
 
     <!-- Navigation -->
     <div class="nav-container">
@@ -40,7 +40,7 @@
 
       <!-- About -->
       <div id="about-div" class="tab">
-        <p>Hi I'm Kevin.</p>
+        <p>Hi I'm Jose.</p>
         <div class="divide"><hr></div>
         <div class="container">
           <div class="event">
@@ -81,10 +81,10 @@
       <!-- Contact -->
       <div id="contact-div" class="tab">
         <div class="contact">
-          <a href="mailto:mail@kc5xc@virginia.edu?Subject=Hello!" target="_top"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i></a>
-          <a href="" target="_top"><i class="fa fa-file-o fa-2x" aria-hidden="true"></i></a>
-          <a href="https://www.facebook.com/profile.php?id=1069218861" target="_blank"><i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i></a>
-          <a href="https://www.linkedin.com/in/kevin-chen-21582a103" target="_blank"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a>
+          <a href="mailto:mail@jms7jm@virginia.edu?Subject=Hello!" target="_top"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i></a>
+          <a href="https://siguenza-jose.github.io/jose-siguenza-resume.pdf" target="_top"><i class="fa fa-file-o fa-2x" aria-hidden="true"></i></a>
+          <a href="https://www.facebook.com/jose.siguenza.77" target="_blank"><i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i></a>
+          <a href="https://www.linkedin.com/in/jose-siguenza-1864a173" target="_blank"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a>
         </div>
       </div>
     <!-- End of Content Pane -->
